[gd_scene load_steps=5 format=2]

[ext_resource path="res://MarginContainer.gd" type="Script" id=1]
[ext_resource path="res://sprites/button_exit.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_restart.png" type="Texture" id=3]
[ext_resource path="res://sprites/button_home.png" type="Texture" id=4]

[node name="second_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="restart_container" type="MarginContainer" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 254.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="restart_container"]
margin_right = 197.0
margin_bottom = 77.0
icon = ExtResource( 3 )
flat = true

[node name="return_container" type="MarginContainer" parent="."]
margin_left = 410.0
margin_top = 200.0
margin_right = 630.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return2menu" type="Button" parent="return_container"]
margin_right = 219.0
margin_bottom = 77.0
icon = ExtResource( 4 )
flat = true

[node name="exit_container" type="MarginContainer" parent="."]
margin_left = 600.0
margin_top = 200.0
margin_right = 654.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="exit_container"]
margin_right = 177.0
margin_bottom = 77.0
icon = ExtResource( 2 )
flat = true
[connection signal="pressed" from="restart_container/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="return_container/return2menu" to="." method="_on_return2menu_pressed"]
[connection signal="pressed" from="exit_container/exit" to="." method="_on_exit_pressed"]
